@@ -2,7 +2,7 @@
 <TBX dialect="TBX-Min" xml:lang="en">
     <header>
         <languages source="de" target="en"/>
-        <title>TBX sample</title>
+        <id>TBX sample</id>
         <creator>Klaus-Dirk Schmidt</creator>
         <directionality>bidirectional</directionality>
         <license>CC BY license can be freely copied and modified</license>
